[gd_scene load_steps=20 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://ui/mapBtn/mapBtn.tscn" type="PackedScene" id=2]
[ext_resource path="res://res/ui/kuang.png" type="Texture" id=3]
[ext_resource path="res://ui/theme.tres" type="Theme" id=4]
[ext_resource path="res://ui/selImg/selImg.tscn" type="PackedScene" id=5]
[ext_resource path="res://res/chara/mao.png" type="Texture" id=6]
[ext_resource path="res://ui/playerPan/playerPan.tscn" type="PackedScene" id=7]
[ext_resource path="res://core/player.tscn" type="PackedScene" id=8]
[ext_resource path="res://res/map/bg.png" type="Texture" id=9]
[ext_resource path="res://res/map/map_xian.png" type="Texture" id=10]
[ext_resource path="res://res/ui/g_Backgroud_wall_tile.png" type="Texture" id=11]
[ext_resource path="res://res/ui/dialoge_frame.png" type="Texture" id=12]
[ext_resource path="res://ui/jiaoChen/jiaoChen.tscn" type="PackedScene" id=13]
[ext_resource path="res://core/scPan.gd" type="Script" id=14]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="GDScript" id=2]
script/source = "extends Sprite


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"
onready var txt = $NinePatchRect/RichTextLabel

# Called when the node enters the scene tree for the first time.
func _ready():
	hide()
	sys.main.connect(\"onItemIn\",self,\"onItemIn\")
	sys.main.connect(\"onBattleReady\",self,\"onBattleReady\")
# Called every frame. 'delta' is the elapsed time since the previous frame.

func onBattleReady():
	hide()

var gs = [1,3,9,27]
func onItemIn(item):
	if visible:
		if item is Chara && gn > 0:
			var g = gs[item.lv-1] * config.chaGold
			sys.main.player.plusGold(g)
			var neff = item.newEff(\"numHit\")
			neff.position = position + Vector2(0,-30)
			neff.scale = Vector2(1,1)
			neff.init(g,item)
			neff.lab.text = \"+ %dG\" % g
			neff.play(\"wu\")
			var node = item.get_parent()
			item.remove()
			if item.isItem :
				node.queue_free()
			gn -= 1
			txt.bbcode_text = \"不要的单位或装备放我这，还能回收%d次！\" % [gn]
			if gn == 0 :
				$AnimationPlayer.play(\"hide\")
		elif item is ItemBt && gn > 0 :
			var g = item.item.price
			sys.main.player.plusGold(g)
			var neff = sys.newEff(\"numHit\",position + Vector2(0,-30))
			neff.scale = Vector2(1,1)
			neff.lab.text = \"+ %dG\" % g
			neff.play(\"wu\")
			sys.main.player.delItem(item.item)
			
			gn -= 1
			txt.bbcode_text = \"不要的单位或装备放我这，还能回收%d次！\" % [gn]
			if gn == 0 :
				$AnimationPlayer.play(\"hide\")
var gn = 3

func _on_mao_visibility_changed():
	if visible :
		$AnimationPlayer.play(\"show\")
		gn = 3
		txt.bbcode_text = \"不要的单位或装备放我这，还能回收%d次！\" % [gn]
"

[sub_resource type="Animation" id=3]
resource_name = "hide"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "hide"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "show"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 159, 155 )
margin_left = 77.7571
margin_right = 76.1013
margin_top = 74.8624
margin_bottom = 74.6316

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 1449.0
margin_bottom = 757.0
color = Color( 0.0901961, 0.0941176, 0.117647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="kuang" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect4" type="NinePatchRect" parent="kuang"]
modulate = Color( 0.501961, 0.501961, 0.501961, 1 )
margin_right = 1643.0
margin_bottom = 821.0
texture = ExtResource( 11 )
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect3" type="NinePatchRect" parent="kuang"]
margin_left = 326.587
margin_top = -138.0
margin_right = 1523.59
margin_bottom = 46.0
texture = ExtResource( 12 )
patch_margin_left = 84
patch_margin_top = 78
patch_margin_right = 83
patch_margin_bottom = 85
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect5" type="NinePatchRect" parent="kuang"]
visible = false
margin_left = 38.0
margin_top = 481.0
margin_right = 293.0
margin_bottom = 520.0
texture = ExtResource( 3 )
patch_margin_left = 14
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scene" type="Node2D" parent="."]
position = Vector2( 377.707, 143.694 )

[node name="bg" type="Node2D" parent="scene"]

[node name="bg" type="TextureRect" parent="scene/bg"]
margin_left = -51.0
margin_top = -98.0
margin_right = 949.0
margin_bottom = 504.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="xian" type="TextureRect" parent="scene/bg"]
visible = false
self_modulate = Color( 0.0352941, 0.470588, 0.588235, 1 )
material = SubResource( 1 )
margin_left = -51.0
margin_top = -98.0
margin_right = 749.0
margin_bottom = 404.0
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mao" type="Sprite" parent="scene/bg"]
position = Vector2( 506.552, 159.599 )
texture = ExtResource( 6 )
script = SubResource( 2 )

[node name="NinePatchRect" type="NinePatchRect" parent="scene/bg/mao"]
anchor_left = 1.11111
anchor_top = -0.515625
anchor_right = 4.48611
anchor_bottom = 1.42188
margin_left = -36.0
margin_top = -32.0
margin_right = -36.0
margin_bottom = -32.0
theme = ExtResource( 4 )
texture = ExtResource( 3 )
patch_margin_left = 8
patch_margin_top = 7
patch_margin_right = 5
patch_margin_bottom = 7
__meta__ = {
"_edit_use_anchors_": true
}

[node name="RichTextLabel" type="RichTextLabel" parent="scene/bg/mao/NinePatchRect"]
margin_left = 13.0
margin_top = 13.0
margin_right = 236.0
margin_bottom = 114.0
text = "不要的单位放我这，回收！"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="scene/bg/mao"]
anims/hide = SubResource( 3 )
anims/show = SubResource( 4 )

[node name="TileMap" type="TileMap" parent="scene"]
self_modulate = Color( 0.722656, 0.71701, 0.71701, 1 )
cell_size = Vector2( 100, 100 )
cell_y_sort = true
format = 1

[node name="Control" type="Control" parent="scene"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="uiLayer" type="CanvasLayer" parent="scene"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -145.894, -114.943 )
anchor_mode = 0

[node name="ui" type="Control" parent="."]
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="ui"]
margin_top = 645.0
margin_right = 1636.0
margin_bottom = 820.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="ui/Panel"]
margin_left = 17.0
margin_top = 11.0
margin_right = 1616.0
margin_bottom = 173.0
scroll_vertical_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="HBoxContainer" parent="ui/Panel/ScrollContainer"]

[node name="selImg" parent="ui" instance=ExtResource( 5 )]

[node name="guanKa" type="Control" parent="ui"]
margin_left = 1484.66
margin_top = 155.448
margin_right = 1524.66
margin_bottom = 195.448
rect_scale = Vector2( 1.5, 1.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" parent="ui/guanKa" instance=ExtResource( 2 )]
margin_left = -33.0
margin_top = -33.0
margin_right = 31.0
margin_bottom = 31.0

[node name="optionBtn" type="Button" parent="ui"]
margin_left = 1523.0
margin_top = 2.0
margin_right = 1642.0
margin_bottom = 54.3754
text = "菜单"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="optionBtn2" type="Button" parent="ui"]
margin_left = 1458.78
margin_top = 2.45517
margin_right = 1519.99
margin_bottom = 54.8305
text = "测试"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player" parent="ui" instance=ExtResource( 7 )]
margin_left = 1395.46
margin_top = 209.119
margin_right = 1435.46
margin_bottom = 249.119

[node name="NinePatchRect" parent="ui/player" index="0"]
margin_left = -41.0
margin_top = 45.0
margin_right = 219.0
margin_bottom = 396.0

[node name="lv" parent="ui/player" index="1"]
margin_left = 23.5936
margin_top = 51.8272
margin_right = 109.594
margin_bottom = 93.8272

[node name="gold" parent="ui/player" index="2"]
margin_left = 23.8923
margin_top = 85.7421
margin_right = 145.892
margin_bottom = 127.742

[node name="renKou" parent="ui/player" index="3"]
margin_left = 24.8199
margin_top = 116.473
margin_right = 143.82
margin_bottom = 158.473

[node name="hp" parent="ui/player" index="4"]
margin_left = 24.8199
margin_top = 148.217
margin_right = 143.82
margin_bottom = 190.217
text = "生命：0/10"

[node name="GridContainer" parent="ui/player" index="5"]
margin_left = 3.6974
margin_top = 195.565
margin_right = 207.697
margin_bottom = 295.565

[node name="skill" parent="ui/player/GridContainer" index="0"]
margin_right = 40.0
margin_bottom = 40.0

[node name="skill2" parent="ui/player/GridContainer" index="1"]
margin_left = 44.0
margin_right = 84.0
margin_bottom = 40.0

[node name="skill3" parent="ui/player/GridContainer" index="2"]
margin_left = 88.0
margin_right = 128.0
margin_bottom = 40.0

[node name="skill4" parent="ui/player/GridContainer" index="3"]
margin_left = 132.0
margin_right = 172.0
margin_bottom = 40.0

[node name="skill5" parent="ui/player/GridContainer" index="4"]
margin_top = 44.0
margin_right = 40.0
margin_bottom = 84.0

[node name="skill6" parent="ui/player/GridContainer" index="5"]
margin_left = 44.0
margin_top = 44.0
margin_right = 84.0
margin_bottom = 84.0

[node name="skill7" parent="ui/player/GridContainer" index="6"]
margin_left = 88.0
margin_top = 44.0
margin_right = 128.0
margin_bottom = 84.0

[node name="skill8" parent="ui/player/GridContainer" index="7"]
margin_left = 132.0
margin_top = 44.0
margin_right = 172.0
margin_bottom = 84.0

[node name="NinePatchRect2" type="NinePatchRect" parent="ui/player"]
margin_left = -69.0
margin_top = -161.0
margin_right = 246.0
margin_bottom = 435.0
texture = ExtResource( 12 )
patch_margin_left = 84
patch_margin_top = 81
patch_margin_right = 84
patch_margin_bottom = 81
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dps" type="Control" parent="ui"]
margin_left = -21.2401
margin_top = 161.236
margin_right = 18.7599
margin_bottom = 201.236
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dpsBtn" type="Button" parent="ui/dps"]
margin_left = 43.0
margin_top = 418.0
margin_right = 140.0
margin_bottom = 470.375
text = "总伤害"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="suDu" type="Control" parent="ui"]
margin_left = 172.443
margin_top = 560.885
margin_right = 212.443
margin_bottom = 600.885
__meta__ = {
"_edit_use_anchors_": false
}

[node name="numBtn" type="Button" parent="ui/suDu"]
margin_left = -52.0
margin_top = 17.0
margin_right = 43.0
margin_bottom = 69.3754
toggle_mode = true
pressed = true
text = "数字"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButton" type="Button" parent="ui/suDu"]
margin_left = 44.0
margin_top = 16.0
margin_right = 137.0
margin_bottom = 68.3754
toggle_mode = true
text = "加速"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect3" type="NinePatchRect" parent="ui"]
margin_left = 2.0
margin_top = 1.0
margin_right = 325.0
margin_bottom = 644.0
texture = ExtResource( 12 )
patch_margin_left = 84
patch_margin_top = 81
patch_margin_right = 84
patch_margin_bottom = 81
__meta__ = {
"_edit_use_anchors_": false
}

[node name="itemSll" type="ScrollContainer" parent="ui"]
margin_left = 33.0
margin_top = 79.0
margin_right = 307.0
margin_bottom = 557.0
scroll_horizontal_enabled = false
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="itemGrid" type="GridContainer" parent="ui/itemSll"]
grow_horizontal = 0
grow_vertical = 0
columns = 5

[node name="jiaoChen" parent="ui" instance=ExtResource( 13 )]
margin_left = 1051.0
margin_top = 60.0
margin_right = 1051.0
margin_bottom = 60.0

[node name="1" parent="ui/jiaoChen" index="0"]
margin_left = -907.0
margin_top = 561.0
margin_right = -715.0
margin_bottom = 628.0

[node name="2" parent="ui/jiaoChen" index="1"]
margin_left = -807.908
margin_top = 28.7102
margin_right = -626.908
margin_bottom = 95.7102

[node name="3" parent="ui/jiaoChen" index="2"]
margin_left = 201.236
margin_top = 63.2235
margin_right = 382.24
margin_bottom = 130.224

[node name="Label" parent="ui/jiaoChen/3" index="0"]
margin_left = 54.0103
margin_top = 14.274
margin_right = 126.01
margin_bottom = 47.274
text = "选择关卡"

[node name="4" parent="ui/jiaoChen" index="3"]
margin_left = 170.408
margin_top = 373.655
margin_right = 351.408
margin_bottom = 440.655

[node name="Label" parent="ui/jiaoChen/4" index="0"]
text = "学习你的天赋"

[node name="players" type="Node" parent="."]

[node name="player" parent="players" instance=ExtResource( 8 )]

[node name="topUi" type="CanvasLayer" parent="."]
[connection signal="tree_entered" from="." to="." method="_on_main_tree_entered"]
[connection signal="tree_exiting" from="." to="." method="_on_main_tree_exiting"]
[connection signal="visibility_changed" from="scene/bg/mao" to="scene/bg/mao" method="_on_mao_visibility_changed"]
[connection signal="pressed" from="ui/optionBtn" to="." method="_on_optionBtn_pressed"]
[connection signal="pressed" from="ui/optionBtn2" to="." method="_on_optionBtn2_pressed"]
[connection signal="pressed" from="ui/dps/dpsBtn" to="." method="_on_dpsBtn_pressed"]
[connection signal="pressed" from="ui/suDu/numBtn" to="." method="_on_numBtn_pressed"]
[connection signal="pressed" from="ui/suDu/CheckButton" to="." method="_on_CheckButton_pressed"]

[editable path="ui/player"]

[editable path="ui/jiaoChen"]
